--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 	</head>
 	<body>
 		<div id="wrapper">
-			<!-- Make this a header 1 -->Cakes for Everyone
+			<h1> Cakes for Everyone </h1>
 			
-			<!-- Make this a header 2 -->Chocolate Cake
+			<h2> Chocolate Cake </h2>
 
-			<!-- Make this a paragraph -->Sweet roll lollipop wafer sweet roll. Chocolate bar toffee chocolate cake. Donut candy canes cheesecake candy pie apple pie tootsie roll gingerbread bonbon.
+			<p> Sweet roll lollipop wafer sweet roll. Chocolate bar toffee chocolate cake. Donut candy canes cheesecake candy pie apple pie tootsie roll gingerbread bonbon.</p>
 
-			<!-- Make this a header 3 -->Vanilla Cake
+			<h3> Vanilla Cake </h3>
 
-			<!-- Make this a paragraph -->Dragée cupcake gingerbread pastry cheesecake dessert bear claw tiramisu tart. Marshmallow tart sugar plum. Lollipop chocolate cake topping. Carrot cake gummies gummi bears brownie jujubes bear claw cake donut halvah.
+			<P> Dragée cupcake gingerbread pastry cheesecake dessert bear claw tiramisu tart. Marshmallow tart sugar plum. Lollipop chocolate cake topping. Carrot cake gummies gummi bears brownie jujubes bear claw cake donut halvah.</P>
 
-			<!-- Make this a header 4 -->Strawberry Cake
+			<h4> Strawberry Cake </h4>
 
-			<!-- Make this a paragraph -->Halvah chocolate bar pudding chocolate. Carrot cake jelly sugar plum. Tootsie roll sweet roll ice cream cookie cupcake biscuit oat cake tiramisu croissant.
+			<p> Halvah chocolate bar pudding chocolate. Carrot cake jelly sugar plum. Tootsie roll sweet roll ice cream cookie cupcake biscuit oat cake tiramisu croissant. </p>
 
-			<!-- Make this a header 5 -->Pineapple Cake
+			<h5/> Pineapple Cake </h5> 
 
-			<!-- Make this a paragraph -->Fruitcake fruitcake lollipop. Topping muffin ice cream chocolate cake croissant cake icing candy. Cheesecake muffin wafer cookie.
+			<p> Fruitcake fruitcake lollipop. Topping muffin ice cream chocolate cake croissant cake icing candy. Cheesecake muffin wafer cookie. </p> 
 
-			<!-- Make this a header 6 -->Oreo Cake
+			<h6> Oreo Cake </h6>
 
-			<!-- Make this a paragraph -->Apple pie gummi bears gingerbread bonbon cake cupcake gummies. Fruitcake dragée chocolate bar. Danish sugar plum jelly wafer topping marshmallow.
+			<p> Apple pie gummi bears gingerbread bonbon cake cupcake gummies. Fruitcake dragée chocolate bar. Danish sugar plum jelly wafer topping marshmallow. </p>
 		</div>
 	</body>
 </html>
